"""Modelos ORM del panel de administración: profesores, cursos y reseñas (US-32/US-21)."""

from datetime import datetime

from sqlalchemy import JSON, DateTime, ForeignKey, Integer, String, Text, UniqueConstraint, Uuid
from sqlalchemy.dialects.postgresql import JSONB
from sqlalchemy.orm import Mapped, mapped_column
from sqlalchemy.sql import func

from app.db.base import Base


class Professor(Base):
    """Profesor registrado en el sistema."""

    __tablename__ = "professors"

    id: Mapped[str] = mapped_column(Uuid(as_uuid=False), primary_key=True)
    name: Mapped[str] = mapped_column(String(120), nullable=False)
    availability: Mapped[list[str]] = mapped_column(
        JSON().with_variant(JSONB, "postgresql"), nullable=False, default=list
    )
    department: Mapped[str | None] = mapped_column(String(120), nullable=True)
    degree: Mapped[str | None] = mapped_column(String(200), nullable=True)
    bio: Mapped[str | None] = mapped_column(String(1000), nullable=True)
    email: Mapped[str | None] = mapped_column(String(120), nullable=True)
    # Foto del profesor (migración 0017): el archivo vive en GCS; aquí solo la ruta
    # gs://. Si es NULL, el profesor no tiene foto y la ficha usa sus iniciales.
    photo_gcs_path: Mapped[str | None] = mapped_column(String(500), nullable=True)
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), nullable=False, server_default=func.now()
    )
    updated_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), nullable=False, server_default=func.now(), onupdate=func.now()
    )


class Course(Base):
    """Curso académico del catálogo (US-32)."""

    __tablename__ = "courses"

    id: Mapped[str] = mapped_column(Uuid(as_uuid=False), primary_key=True)
    code: Mapped[str] = mapped_column(String(20), unique=True, index=True, nullable=False)
    name: Mapped[str] = mapped_column(String(120), nullable=False)
    level: Mapped[str] = mapped_column(String(10), nullable=False)
    prerequisites: Mapped[list[str]] = mapped_column(
        JSON().with_variant(JSONB, "postgresql"), nullable=False, default=list
    )
    professor_id: Mapped[str | None] = mapped_column(
        Uuid(as_uuid=False),
        ForeignKey("professors.id", ondelete="SET NULL"),
        nullable=True,
        index=True,
    )
    # Campos usados por las fichas del agente (migración 0015). Se declaran aquí para
    # que el modelo coincida con el esquema real de Neon/producción.
    credits: Mapped[int] = mapped_column(Integer, nullable=False, server_default="0", default=0)
    difficulty: Mapped[int | None] = mapped_column(Integer, nullable=True)
    course_type: Mapped[str | None] = mapped_column(String(20), nullable=True)
    # Sílabo (US-32): el PDF/DOC vive en GCS; aquí guardamos el nombre original
    # (para mostrar/descargar), la ruta gs:// del objeto y cuándo se subió. Si
    # `syllabus_uploaded_at` es NULL, el curso no tiene sílabo ("desactualizado").
    syllabus_file_name: Mapped[str | None] = mapped_column(String(255), nullable=True)
    syllabus_gcs_path: Mapped[str | None] = mapped_column(String(500), nullable=True)
    syllabus_uploaded_at: Mapped[datetime | None] = mapped_column(
        DateTime(timezone=True), nullable=True
    )
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), nullable=False, server_default=func.now()
    )
    updated_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), nullable=False, server_default=func.now(), onupdate=func.now()
    )


class Review(Base):
    """Reseña de un estudiante sobre un profesor (US-21)."""

    __tablename__ = "reviews"
    __table_args__ = (
        UniqueConstraint("professor_id", "user_id", name="uq_review_professor_user"),
    )

    id: Mapped[str] = mapped_column(Uuid(as_uuid=False), primary_key=True)
    professor_id: Mapped[str] = mapped_column(
        Uuid(as_uuid=False),
        ForeignKey("professors.id", ondelete="CASCADE"),
        nullable=False,
        index=True,
    )
    user_id: Mapped[str] = mapped_column(
        Uuid(as_uuid=False),
        ForeignKey("users.id", ondelete="CASCADE"),
        nullable=False,
    )
    rating: Mapped[int] = mapped_column(Integer, nullable=False)
    comment: Mapped[str] = mapped_column(Text, nullable=False, default="")
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), nullable=False)
